fixing responsive frame overflow issue

--- a/wp-content/themes/rlt/styles/sass/settings/_base.scss
+++ b/wp-content/themes/rlt/styles/sass/settings/_base.scss
@@ -1,9 +1,12 @@
 body{
   background-color: $cool_grey;
-  overflow-x: hidden;
-  max-width: 100vw;
 }
 
 main{
   clear: both;
+  overflow-x: hidden;
+}
+
+@media screen and (min-width: 600px){
+  main{ padding-top: 1em; }
 }
